--- a/form đăng kí.html
+++ b/form đăng kí.html
@@ -10,48 +10,41 @@
 </head>
 <body>
   <header class="header">
-    <section>
-      <div class="header_menu">
-          <div class="container-fluid">
-              <div class="row align-items-center">
-                  <div class="col-md-3">
-                      <img src="./img/logo htech performance chữ vàng nền trong 500x500.png">
-                  </div>
-                  <div class="col-md-7">
-                      <nav class="navbar navbar-expand-sm ">
-                          <ul class="navbar-nav">
-                              <li class="nav-item">
-                                <a class="nav-link" href="#">Website</a>
-                              </li> 
-                              <li class="nav-item">
-                                <a class="nav-link" href="#">Nas-Server</a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link" href="#">LAN</a>
-                              </li>
-                              <li class="nav-item">
-                                  <a class="nav-link" href="#">Camera</a>
-                                </li>
-                                <li class="nav-item">
-                                  <a class="nav-link" href="#">Internet cáp quang</a>
-                                </li>
-                            </ul>
-                      </nav>
-                  </div>
-                  <div class="col-md-2">
-                      <button class="btn btn-warning btn_advise">Liên hệ tư vấn</button>
-                  </div>
-              </div>
-          </div>
-      </div>
-  
-  </section>
-  </header>
+
+    <img id="logo_mobile" src="img/logo htech performance chữ vàng nền trong.png">
+
+    <div class="header_1">
+        <div class="container-fluid">
+            <div class="row align-items-center">
+                <div class="col-md-2">
+                    <a href="index.html">
+                    <img src="img/logo htech performance chữ vàng nền trong.png">
+                    </a>
+                </div>
+
+                <div class="col-md-5"></div>
+
+                <div class="col-md-5">
+                    <nav class="navbar">
+                        <a href="#" class="nav-link">Website</a>
+                        <a href="#" class="nav-link">Nas-Server</a>
+                        <a href="#" class="nav-link">LAN</a>
+                        <a href="#" class="nav-link">Camera</a>
+                        <a href="#" class="nav-link">Internet cáp quang</a>
+                    </nav>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</header>
+
+
     <div class="main">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                  <img src="img/pngegg.png">
+                  <img src="img/mail-147401_1280.png">
                 </div>
                 <div class="col-md-6 text-center ml-5">
                   <h4>
@@ -59,9 +52,9 @@
                   </h4>
                   <form id="formEmail">
 
-                    <input id="name" placeholder="Tên của bạn là gì?" class="form-control" type="text">
-                    <input id="numberPhone" placeholder="Nhập số điện thoại của bạn vào đây" class="mt-3 form-control" type="text">
-                    <textarea id="contentMessage" placeholder="Nội dung cần tư vấn" class="mt-3 form-control" type="text"></textarea>
+                    <input id="name" placeholder="Tên của bạn là gì ?" class="form-control" type="text">
+                    <input id="numberPhone" placeholder="Nhập số điện thoại của bạn vào đây !" class="mt-3 form-control" type="text">
+                    <textarea id="contentMessage" placeholder="Nội dung cần tư vấn ?" class="mt-3 form-control" type="text"></textarea>
                     <button onclick="actionEmailSend()" id="backButton" type="submit" class="btn btn-warning">Để lại thông tin</button>
                   </form>
                 </div>
