--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta
+    name="description"
+    content="Htech Performance lập trình website thiết kế website chuyên nghiệp giá rẻ chất lượng cao"
+  />
+  <meta
+    name="keywords"
+    content="lập trình, website, giá rẻ, chuyên nghiệp, chất lượng cao, developer, công nghệ, htech performance, 4 triệu"
+  />
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="Htech performance" />
+  <link rel="icon" href="/img/icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="index.css">
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
@@ -67,6 +78,37 @@
 
                     <div class="col-md-6">
                         <img src="img/lenovoyoga9i_modes_FCRO.png.webp">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid">
+            <div class="Slogan_Brand_mobile">
+                <div class="row">
+                    <div class="col-12">
+                        <h2>
+                            Tại,
+                        </h2>
+
+                        <h1>
+                            Htech Performance
+                        </h1>
+
+                        <div class="Slogan_Brand_mobile_more">
+                            <p class="card-text">
+                                Chúng tôi tự hào mang đến các giải pháp thiết kế và lập trình website tối ưu nhất cho các cá nhân, doanh nghiệp, cửa hàng vừa và nhỏ. 
+                            </p>
+
+                            <p class="card-text">
+                                Chúng tôi hiểu rằng mỗi doanh nghiệp đều có nhu cầu riêng trong việc xây dựng hình ảnh 
+                                thương hiệu và phát triển kinh doanh trực tuyến.
+                            </p>
+
+                            <hr>
+
+                            <img class="card-img-bottom" src="/img/business.png">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -167,7 +209,7 @@
                  
                     <div class="col-md-6">
                         <div class="row">
-                            <div class="col-sm-6">
+                            <div class="col-6 col-sm-6">
                                 <div class="card">
                                     <img src="https://media.istockphoto.com/id/1145748305/vi/vec-to/bi%E1%BB%83u-t%C6%B0%E1%BB%A3ng-m%C3%A0n-h%C3%ACnh-m%C3%A1y-t%C3%ADnh-bi%E1%BB%83u-t%C6%B0%E1%BB%A3ng-pc-ph%E1%BA%B3ng-h%C3%ACnh-minh-h%E1%BB%8Da-vector.jpg?s=612x612&w=0&k=20&c=wLL2Huu4x-1_ECu_j9od9YDAPgDpJxK-Ccnhp05CWpY=" style="width: 50%;">
                                     <h3 class="card-title">Website</h3>
@@ -177,7 +219,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-sm-6">
+                            <div class="col-6 col-sm-6">
                                 <div class="card">
                                     <img src="https://cdn-icons-png.flaticon.com/512/916/916837.png" style="width: 50%;">
                                     <h3 class="card-title">Nas-Server</h3>
@@ -189,7 +231,7 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-sm-6">
+                            <div class="col-6 col-sm-6">
                                 <div class="card">
                                     <img src="https://media.istockphoto.com/id/1304219438/vi/vec-to/bi%E1%BB%83u-t%C6%B0%E1%BB%A3ng-camera-an-ninh-cctv-bi%E1%BB%83u-t%C6%B0%E1%BB%A3ng-b%E1%BA%A3o-v%E1%BB%87-camera-h%C3%ACnh-minh-h%E1%BB%8Da-vector.jpg?s=612x612&w=0&k=20&c=HOTkDfzmpX4-TLW6jLHjFkvOeXeAw63ATR_ZkWvK4Ow=" style="width: 50%;">
                                     <h3 class="card-title">Camera</h3>
@@ -199,7 +241,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-sm-6">
+                            <div class="col-6 col-sm-6">
                                 <div class="card">
                                     <img src="./img/icona-del-router-immagine-dsign-2mmrcjb.jpg" style="width: 50%;">
                                     <h3 class="card-title">Internet</h3>
@@ -299,7 +341,7 @@
                         <img src="./img/371973614_1400523030530336_2679148508521371235_n.jpg" >
                         <p>
                             Trần Nguyễn Thanh Hậu<br>
-                            Founder của Htech Performance
+                            Founder Htech Performance
                         </p>
                     </div>
 
